--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "create-tailwind-react",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A utility for createing a react typescript tailwind project with scss support",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "create-tailwind-react": ".index.js"
+    "create-tailwind-react": "index.js"
   },
   "repository": {
     "type": "git",
