--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "create-tailwind-react": "node index.js"
+    "create-tailwind-react": "index.js"
   },
   "repository": {
     "type": "git",
